# 1costingfe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/account_justification/: CAS10_preconstruction_costs.md  CAS21_building_cost_research.md  CAS21_buildings.md  CAS220107_power_supplies.md  CAS220109_direct_energy_converter.md  CAS220110_remote_handling.md  CAS220112_isotope_separation.md  CAS22_reactor_components.md  CAS30_indirect_service_costs.md  CAS40_capitalized_owners_costs.md  CAS60_interest_during_construction.md  CAS70_levelized_annual_cost.md  CAS70_staffing_and_om_costs.md  CAS71_73_staffing.md  CAS80_annualized_fuel_cost.md  (+1 more)
examples/: backcasting_bridge.py  comparison.py  cost_overrides.py  dec_blog_numbers.py  dhe3_burn_fractions.py  dhe3_mix_optimization.py  dhe3_pulsed_frc.py  dt_mirror.py  dt_stellarator.py  dt_tokamak.py  dt_tokamak_0d.py  external_physics_handoff.py  foak_vs_noak.py  lower_bound_blog_figure.py  lower_bound_blog_numbers.py  lower_bound_blog_tables.py  multi_module.py  parameter_sweeps.py  pb_mirror.py  tornado_plot.py
tests/: test_adapter.py  test_backcast.py  test_cas22.py  test_cas22_n_coils.py  test_costs.py  test_defaults.py  test_economics.py  test_external_physics_handoff.py  test_geometry.py  test_ife_mif_power_balance.py  test_model.py  test_paper_benchmark_scripts.py  test_physics.py  test_power_balance.py  test_power_cycle.py  test_pulsed_dec_costing.py  test_pulsed_power_balance.py  test_tokamak.py  test_types.py  test_uncertainty.py  test_validation.py
tex/: paper.tex  references.bib
(+63 files in other folders)
